# yaml-cli

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  config.yaml
src/: main.rs
tests/azure/: 001_basic_commands.yaml  001_out.yaml
tests/dir1/: input1.yaml  input2.yaml
tests/dir2/: commands.yaml  main.yaml  vars.yaml
tests/output/: README.md  execute_output1.yaml  execute_output2.yaml  output1.yaml  output2.yaml
