[package]
name = "yw"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "yaml wrangler and handler"
repository = "https://github.com/deixei/yaml-cli"
homepage = "http://www.deixei.com/yw"


[dependencies]
clap = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.11.1"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }